fix:fixing some styles, minicart, mega-menu and footer on tablet

--- a/styles/css/header/vtex.flex-layout.css
+++ b/styles/css/header/vtex.flex-layout.css
@@ -60,3 +60,6 @@
 .flexColChild--mi__cuenta--col:last-child {
     transform: translate(10px, -10px);
 }
+.biggy-autocomplete {
+    border-radius: 25px;
+}
