--- a/styles/css/header/vtex.menu.css
+++ b/styles/css/header/vtex.menu.css
@@ -7,10 +7,10 @@
 }
 
 .styledLinkContainer--item-header-group-2{
-   padding-left: 10rem;
+   padding-left: 8rem;
 }
 .styledLinkContainer--item-header-group-3{
-    padding-left: 7rem;
+    padding-left: 5rem;
 }
 @media screen and (max-width: 550px){
     .styledLinkContent--item-header-group,
@@ -26,4 +26,8 @@
      .styledLinkContainer--item-header-group-3{
          padding-left: 0;
      }
+}
+
+.styledLinkContent--item-header-group-3{
+    border-left: 1px solid #d9d9d9
 }
